--- a/Fetch_snr_DA.ipynb
+++ b/Fetch_snr_DA.ipynb
@@ -536,223 +536,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "284d21f8-2096-4138-a214-06e22a488449",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CATEGORY_1</th>\n",
-       "      <th>CATEGORY_2</th>\n",
-       "      <th>CATEGORY_3</th>\n",
-       "      <th>CATEGORY_4</th>\n",
-       "      <th>MANUFACTURER</th>\n",
-       "      <th>BRAND</th>\n",
-       "      <th>BARCODE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Health &amp; Wellness</td>\n",
-       "      <td>Hair Care</td>\n",
-       "      <td>Hair Tools</td>\n",
-       "      <td>Hair Brushes &amp; Combs</td>\n",
-       "      <td>PLACEHOLDER MANUFACTURER</td>\n",
-       "      <td>BULK BUYS</td>\n",
-       "      <td>731015145751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Health &amp; Wellness</td>\n",
-       "      <td>Hair Removal</td>\n",
-       "      <td>Shaving Gel &amp; Cream</td>\n",
-       "      <td>Women's Shaving Gel &amp; Cream</td>\n",
-       "      <td>PLACEHOLDER MANUFACTURER</td>\n",
-       "      <td>WAHL</td>\n",
-       "      <td>43917102238</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>Health &amp; Wellness</td>\n",
-       "      <td>Skin Care</td>\n",
-       "      <td>Lip Balms &amp; Treatments</td>\n",
-       "      <td>Lip Balms</td>\n",
-       "      <td>THE CLOROX COMPANY</td>\n",
-       "      <td>BURT'S BEES BEAUTY</td>\n",
-       "      <td>792850662094</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Snacks</td>\n",
-       "      <td>Puffed Snacks</td>\n",
-       "      <td>Popcorn</td>\n",
-       "      <td>Already Popped Popcorn</td>\n",
-       "      <td>STONEHEDGE FARMS INC</td>\n",
-       "      <td>STONEHEDGE FARMS</td>\n",
-       "      <td>45764333544</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>Health &amp; Wellness</td>\n",
-       "      <td>Hair Removal</td>\n",
-       "      <td>Shaving Gel &amp; Cream</td>\n",
-       "      <td>Women's Shaving Gel &amp; Cream</td>\n",
-       "      <td>CONAIR LLC</td>\n",
-       "      <td>CONAIR</td>\n",
-       "      <td>191566227113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>845485</th>\n",
-       "      <td>Beverages</td>\n",
-       "      <td>Carbonated Soft Drinks</td>\n",
-       "      <td>Cola</td>\n",
-       "      <td>Regular Cola</td>\n",
-       "      <td>PEPSICO</td>\n",
-       "      <td>PEPSI</td>\n",
-       "      <td>697937348048</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>845497</th>\n",
-       "      <td>Snacks</td>\n",
-       "      <td>Puffed Snacks</td>\n",
-       "      <td>Popcorn</td>\n",
-       "      <td>Microwave Popcorn</td>\n",
-       "      <td>REDNERS WAREHOUSE MARKET INC</td>\n",
-       "      <td>REDNERS</td>\n",
-       "      <td>25788010799</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>845507</th>\n",
-       "      <td>Snacks</td>\n",
-       "      <td>Puffed Snacks</td>\n",
-       "      <td>Popcorn</td>\n",
-       "      <td>Microwave Popcorn</td>\n",
-       "      <td>LEE THOMPSON FAWCETT CO.</td>\n",
-       "      <td>BELL VIEW</td>\n",
-       "      <td>70980223829</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>845523</th>\n",
-       "      <td>Health &amp; Wellness</td>\n",
-       "      <td>Medicines &amp; Treatments</td>\n",
-       "      <td>Digestive Health Medicines &amp; Treatments</td>\n",
-       "      <td>Nausea &amp; Motion Sickness Medicines &amp; Treatments</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>851329008440</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>845533</th>\n",
-       "      <td>Health &amp; Wellness</td>\n",
-       "      <td>Hair Care</td>\n",
-       "      <td>Hair Tools</td>\n",
-       "      <td>Hair Brushes &amp; Combs</td>\n",
-       "      <td>PLACEHOLDER MANUFACTURER</td>\n",
-       "      <td>MAGIDEAL</td>\n",
-       "      <td>703676315477</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>67459 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               CATEGORY_1              CATEGORY_2  \\\n",
-       "15      Health & Wellness               Hair Care   \n",
-       "25      Health & Wellness            Hair Removal   \n",
-       "31      Health & Wellness               Skin Care   \n",
-       "39                 Snacks           Puffed Snacks   \n",
-       "44      Health & Wellness            Hair Removal   \n",
-       "...                   ...                     ...   \n",
-       "845485          Beverages  Carbonated Soft Drinks   \n",
-       "845497             Snacks           Puffed Snacks   \n",
-       "845507             Snacks           Puffed Snacks   \n",
-       "845523  Health & Wellness  Medicines & Treatments   \n",
-       "845533  Health & Wellness               Hair Care   \n",
-       "\n",
-       "                                     CATEGORY_3  \\\n",
-       "15                                   Hair Tools   \n",
-       "25                          Shaving Gel & Cream   \n",
-       "31                       Lip Balms & Treatments   \n",
-       "39                                      Popcorn   \n",
-       "44                          Shaving Gel & Cream   \n",
-       "...                                         ...   \n",
-       "845485                                     Cola   \n",
-       "845497                                  Popcorn   \n",
-       "845507                                  Popcorn   \n",
-       "845523  Digestive Health Medicines & Treatments   \n",
-       "845533                               Hair Tools   \n",
-       "\n",
-       "                                             CATEGORY_4  \\\n",
-       "15                                 Hair Brushes & Combs   \n",
-       "25                          Women's Shaving Gel & Cream   \n",
-       "31                                            Lip Balms   \n",
-       "39                               Already Popped Popcorn   \n",
-       "44                          Women's Shaving Gel & Cream   \n",
-       "...                                                 ...   \n",
-       "845485                                     Regular Cola   \n",
-       "845497                                Microwave Popcorn   \n",
-       "845507                                Microwave Popcorn   \n",
-       "845523  Nausea & Motion Sickness Medicines & Treatments   \n",
-       "845533                             Hair Brushes & Combs   \n",
-       "\n",
-       "                        MANUFACTURER               BRAND       BARCODE  \n",
-       "15          PLACEHOLDER MANUFACTURER           BULK BUYS  731015145751  \n",
-       "25          PLACEHOLDER MANUFACTURER                WAHL   43917102238  \n",
-       "31                THE CLOROX COMPANY  BURT'S BEES BEAUTY  792850662094  \n",
-       "39              STONEHEDGE FARMS INC    STONEHEDGE FARMS   45764333544  \n",
-       "44                        CONAIR LLC              CONAIR  191566227113  \n",
-       "...                              ...                 ...           ...  \n",
-       "845485                       PEPSICO               PEPSI  697937348048  \n",
-       "845497  REDNERS WAREHOUSE MARKET INC             REDNERS   25788010799  \n",
-       "845507      LEE THOMPSON FAWCETT CO.           BELL VIEW   70980223829  \n",
-       "845523                           NaN                 NaN  851329008440  \n",
-       "845533      PLACEHOLDER MANUFACTURER            MAGIDEAL  703676315477  \n",
-       "\n",
-       "[67459 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_product[~df_product['CATEGORY_4'].isnull()]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "bf390a9f-bc2f-4a4e-b04d-9e8cc81b4a7f",
    "metadata": {},
@@ -1063,14 +846,13 @@
    "metadata": {},
    "source": [
     "#### Are there any data quality issues present?\n",
+    "##### The above cells have the references to the points noted below\n",
     "##### USER TABLE\n",
     "- Birthdate Year ranges from 1900 to 2022 which is clearly not feasible for that users to interact with Fetch\n",
     "- One Entry where createddate is before Birthdate\n",
     "\n",
     "##### PRODUCT TABLE\n",
     "- With ~93% nulls in Category4 column, if possible we can either Drop it( as lot of caetgory4 info is already present in Category 3 ) or we need to maintain the columns more stringently\n",
-    "- \n",
-    "\n",
     "\n",
     "##### TRANSACTION TABLE\n",
     "- Lot of non integer values in FINAL_QUANTITY column, Quantity is supposed to be a whole integer\n",
@@ -1087,7 +869,7 @@
    "metadata": {},
    "source": [
     "#### Are there any fields that are challenging to understand?\n",
-    "- In the Transactions column- Scan_date and purchase_date need to be confirmed with their meaning\n",
+    "- In the Transactions column- Scan_date and purchase_date need to be confirmed with their meaning. Purchase date is date of purchase of the product and scan date can be the date the receipt was scanned to capture the coins.!!\n",
     "\n"
    ]
   },
